# The-Greater-Internet-Project

./: .gitignore  GettingStarted.md  HTTPE_EDOI_Spec_v1.0.md  HowTo.md  LICENSE  README.md  RELEASE.md  TODO.md  cert.py  main_output.txt  random.txt  requests.txt  requirements.txt  setup.bat  setup.sh  sonar-project.properties  spec.txt  steps.md  temp_file.txt  tmp.py
analyse/: report1.txt  report2.txt
client/: handle_cert.py  httpe_client.py  keys.py  main.py  trusted_root_pub.pem
conecept/: plan.txt  text.txt
conecept/client/: keys.py  main.py  tempCodeRunnerFile.py
conecept/httpe-server-lib/: runserver.txt  server_cert.json  server_private.pem
conecept/server/: keys.py
demo_code/: avg.txt  cert.crte  client.py  dial_up.py  edoi_client.py  edoi_client_v2.py  edoi_server.py  public_key.edoi  server.py
edoi/: httpe_client.py  httpe_server.py  main.py  test.py
edoi_net/: pyproject.toml
edoi_utils/: pyproject.toml
edoi_utils/certgen/: cli.py
edoi_utils/edoi_utils.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
httpe-server-lib/: root_private.pem
httpe_client/: pyproject.toml
httpe_client/httpe_client/: __init__.py  httpe_client.py  httpe_sync.py
httpe_client/httpe_client.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
httpe_core/: pyproject.toml
httpe_core/httpe_core/: __init__.py  httpe_cert.py  httpe_class.py  httpe_error.py  httpe_keys.py  httpe_logging.py  httpe_types.py
httpe_core/httpe_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
httpe_server/: pyproject.toml
httpe_server/httpe_server/: __init__.py  httpe_server.py
httpe_server/httpe_server.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
p2p/: code.py  edoi.py  network_c.py
scripts/: cert.crte  certgen.py  private_key.edoi  private_key.pem  public.pem  public_key.edoi  time.txt  time_analyse.py  time_analyze.py
server/: cert.crte  cert.py  httpe_cert.py  httpe_class.py  httpe_client.py  httpe_keys.py  httpe_secure.py  httpe_server.py  keys.py  main.py  private_key.edoi  public.pem  public_key.edoi  test.py  user.py
shadownet/: client.py  edoi.py  edoi_connect.py  server.py
specs/: EDOI_v1.0.md  Error_Code.md  HTTPE_EDOI_Spec_v1.0.md
(+35 files in other folders)
