[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "httpe_core"
version = "1.0.1"
description = "Core cryptographic and certificate logic for HTTPE"
readme = "README.md"
license = {text = "MIT"}
authors = [
  { name = "Tristan Kuhn", email = "tristanjkuhn007@gmail.com" }
]
requires-python = ">=3.8"
dependencies = [
  "cryptography>=45.0.4"
]

[tool.setuptools.packages.find]
where = ["."]
