[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "httpe_server"
version = "0.1.0"
description = "HTTPE Server - A secure and simple server for sending date over EDOI-NET and the web"
readme = "README.md"
license = {text = "MIT"}
authors = [
  { name = "Tristan Kuhn", email = "tristanjkuhn007@gmail.com" }
]
requires-python = ">=3.8"
dependencies = [
  "cryptography>=45.0.4",
  "httpe_core>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
